<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Digital Counter</string>
    <string name="ssid_default" translatable="false">PushUpCounter</string>
    <string name="plus" translatable="false">+</string>
    <string name="default_time" translatable="false">00:00.00</string>
    <string name="donate_url" translatable="false">https://clck.ru/33EzZf</string>
    <string name="donate_card" translatable="false">6769 0700 1051 3118</string>
    <string name="donate_phone" translatable="false">+79099988441</string>
    <string name="donate_email" translatable="false">inforvale@mail.ru</string>
    <string name="error">error</string>
    <string name="minus">—\nERROR</string>
    <string name="start">START</string>
    <string name="stop">STOP</string>
    <string name="drawer_open">Open navigation</string>
    <string name="drawer_close">Close navigation</string>
    <string name="menu_add">Add counter</string>
    <string name="menu_reset">Reset</string>
    <string name="menu_edit">Edit counter</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_sound">Changing the output device</string>
    <string name="menu_donate">Support the project</string>
    <string name="dialog_add_title">Add new counter</string>
    <string name="dialog_edit_title">Change counter</string>
    <string name="dialog_delete_title">Are you sure you want to delete this counter?</string>
    <string name="dialog_reset_title">Are you sure you want to reset the counter and timer?</string>
    <string name="dialog_edit_name">Name:</string>
    <string name="dialog_edit_value">Counter value:</string>
    <string name="toast_unable_to_parse_time">Stopwatch value is incorrect</string>
    <string name="dialog_edit_time">Stopwatch value in the format \"00,00,00\"</string>
    <string name="dialog_button_add">Add</string>
    <string name="dialog_button_apply">Apply</string>
    <string name="dialog_button_reset">Reset</string>
    <string name="dialog_button_delete">Delete</string>
    <string name="dialog_button_cancel">Cancel</string>
    <string name="settings_title">Settings</string>
    <string name="settings_display">Display</string>
    <string name="settings_theme">Style</string>
    <string name="settings_theme_light">Light</string>
    <string name="settings_theme_dark">Dark</string>
    <string name="settings_theme_auto_battery">Set by energy saving</string>
    <string name="settings_theme_system">Use system settings</string>
    <string name="settings_keep_on_title">Keep screen on</string>
    <string name="settings_keep_on_summary">Do not turn off the screen while the application is active</string>
    <string name="settings_controls">Control</string>
    <string name="settings_sounds_title">Enable sounds</string>
    <string name="settings_sounds_summary">Play sounds when counter changes</string>
    <string name="settings_to_speech_title">Voice over</string>
    <string name="settings_to_speech_summary">Speak current counter value\n\nSelected: %s</string>
    <string name="settings_speech_error_summary">Speak this word when decrementing the value of the counter</string>
    <string name="settings_speech_error_title">Phrase \"Mistake\"</string>
    <string name="settings_auto_stopwatch_summary">Starting the stopwatch when incrementing the counter</string>
    <string name="settings_auto_stopwatch_title">Stopwatch auto start</string>
    <string name="settings_wifi_relay_summary">Signal transmission via Wi-Fi. The function works only in conjunction with a special device - an electronic contact platform. You need to turn on the product and the Wi-Fi module on your device, connect to the “PushUpCounter” access point with the password “1234567890”, or select device below. Details in the instructions.</string>
    <string name="settings_wifi_relay_title">Wi-Fi remote referee</string>
    <string name="settings_inverse_counter_summary">Oppositely changes counter values when buttons are pressed in the application</string>
    <string name="settings_inverse_counter_title">Counter inversion</string>
    <string name="settings_vibration_title">Turn on vibration</string>
    <string name="settings_vibration_summary">Vibrate when changing in counter values</string>
    <string name="settings_hard_summary">Enable the ability to change the counter value using the volume buttons</string>
    <string name="settings_hard_title">Hardware buttons</string>
    <string name="settings_label_increment_summary">Changing the value of the counter by clicking on it</string>
    <string name="settings_label_increment_title">Respond to click</string>
    <string name="settings_other">Other</string>
    <string name="settings_proximity_sensor_title">Proximity sensor</string>
    <string name="settings_proximity_sensor_summary">Use the device\'s proximity sensor to increase the counter. For example, when pushing</string>
    <string name="settings_version_title">Application version</string>
    <string name="settings_wipe_title">Delete all counters</string>
    <string name="settings_export_title">Export counters</string>
    <string name="settings_export_summary">Export all counters in CSV format</string>
    <string name="settings_wipe_confirmation">Are you sure you want to delete all counters?</string>
    <string name="settings_wipe_confirmation_yes">delete everything</string>
    <string name="settings_flashlight">Flashlight</string>
    <string name="settings_flashlight_summary">Use the device\'s flash as a counter change indicator light</string>
    <string name="flashlight_permission_error">To use the device\'s flash as an indicator, provide permission for the camera</string>
    <string name="toast_wipe_success">All counters have been removed.</string>
    <string name="toast_delete_success">\"%s\" counter removed.</string>
    <string name="toast_no_name_message">Name cannot be empty!</string>
    <string name="toast_unable_to_export">Something went wrong during the export.</string>
    <string name="toast_unable_to_modify">Something went wrong while setting the counter value</string>
    <string name="toast_unable_to_speech_on">Your phone does not support voice acting</string>
    <string name="donate_message">If you liked the application, then you can voluntarily support the further development of this non-commercial project by transferring any amount in rubles. You can do this in the following way:</string>
    <string name="donate_url_message">- link</string>
    <string name="donate_card_message">- by VTB card number</string>
    <string name="donate_phone_message">- by phone number</string>
    <string name="donate_email_message">Send your wishes and suggestions for improving the application to the email address:</string>
    <string name="default_counter_name">Counter</string>
    <string name="unknown">unknown</string>
    <string name="speech_language">Voice language</string>
    <string name="text_copied">Copied</string>
    <string name="count">Quantity</string>
    <string name="time">Time</string>

    <string name="dialog_remote_device_search">Searching remote device</string>
    <string name="dialog_remote_device_search_description">Wait while application search remote device</string>
    <string name="dialog_select_remote_device_title">Select remote device</string>
    <string name="dialog_connection_title">Connection</string>
    <string name="dialog_connection_title_description">Waiting for connection…</string>
    <string name="dialog_failed_connect_title">Failed to connect</string>
    <string name="dialog_failed_connect_title_description">Selected remote device is unreachable, make sure is selected device has no active connections</string>
    <string name="dialog_remote_device_not_found_title">Remote devices not found</string>
    <string name="dialog_remote_device_not_found_title_description">Make sure that remove device is powered on before scanning</string>
    <string name="dialog_failed_scan_wifi_title">Failed to scan WiFi</string>
    <string name="dialog_failed_scan_wifi_title_description">Please make sure WiFi is enabled before scanning network</string>
    <string name="dialog_failed_scan_wifi_location_disabled">Please make sure GPS is enabled before scanning network</string>
    <string name="dialog_failed_scan_wifi_location_permission">Location permission denied, scanning canceled. Please grant location permission for scan networks</string>
    <string name="grant">Grant</string>
    <string name="enable">Enable</string>
    <string name="ok" translatable="false">OK</string>
    <string name="cancel">Cancel</string>
    <string name="select_remote_device_preference">Select WiFi device</string>
    <string name="select_remote_device_preference_summary">Tap to select WiFi remote device</string>
    <string name="summary_remote_device_connected">Connected to %s</string>
    <string name="toast_remote_device_connected">Successfully connected to remote device</string>
    <string name="toast_remote_device_disconnected_network_change">Remote device has been disconnected, due network change</string>
    <string name="toast_remote_device_disconnected_wifi_disabled">Remote device has been disconnected, due disabled WiFi</string>
    <string name="toast_remote_device_already_connected">Remote device is already connected!</string>
</resources>
