<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/_16sdp">

    <TextView
        style="@style/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/donate_message" />

    <TextView
        style="@style/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_6sdp"
        android:text="@string/donate_url_message" />

    <TextView
        android:id="@+id/donate_url_tv"
        style="@style/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoLink="web"
        android:text="@string/donate_url" />

    <TextView
        style="@style/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_6sdp"
        android:text="@string/donate_card_message" />

    <st.pushupcounter.view.component.UnderlineTextView
        android:id="@+id/donate_card_tv"
        style="@style/text_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/donate_card" />

    <TextView
        style="@style/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_6sdp"
        android:text="@string/donate_phone_message" />

    <TextView
        android:id="@+id/donate_phone_tv"
        style="@style/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoLink="phone"
        android:text="@string/donate_phone" />

    <TextView
        style="@style/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_6sdp"
        android:text="@string/donate_email_message" />

    <TextView
        android:id="@+id/donate_email_tv"
        style="@style/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoLink="email"
        android:text="@string/donate_email" />

</LinearLayout>