<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/counterLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="@dimen/_90sdp"
        app:layout_constraintBottom_toTopOf="@+id/chronometer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="42" />

    <TextView
        android:id="@+id/chronometer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/counterLabel"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="@dimen/_32sdp"
        app:layout_constraintBottom_toTopOf="@+id/startButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="00:00.00" />


    <View
        android:id="@+id/view"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/startButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:background="@color/grey"
        android:text="@string/start"
        android:letterSpacing=".4"
        android:textColor="@color/black"
        android:textSize="@dimen/_15sdp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toStartOf="@+id/view"
        app:layout_constraintStart_toStartOf="@+id/chronometer" />

    <Button
        android:id="@+id/stopButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:background="@color/grey"
        android:text="@string/stop"
        android:letterSpacing=".4"
        android:textColor="@color/black"
        android:textSize="@dimen/_15sdp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="@+id/chronometer"
        app:layout_constraintStart_toEndOf="@+id/view" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/incrementButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/increment_color"
            android:paddingTop="@dimen/_32sdp"
            android:paddingBottom="@dimen/_32sdp"
            android:text="@string/plus"
            android:textColor="@color/white"
            android:textSize="@dimen/_15sdp"
            app:layout_constraintEnd_toEndOf="@+id/counterLabel"
            app:layout_constraintStart_toStartOf="@+id/counterLabel"
            app:layout_constraintTop_toBottomOf="@+id/startButton" />

        <Button
            android:id="@+id/decrementButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/decrement_color"
            android:paddingTop="@dimen/_32sdp"
            android:paddingBottom="@dimen/_32sdp"
            android:text="@string/minus"
            android:textColor="@color/white"
            android:letterSpacing=".4"
            android:textSize="@dimen/_15sdp"
            app:layout_constraintEnd_toEndOf="@+id/counterLabel"
            app:layout_constraintStart_toStartOf="@+id/counterLabel"
            app:layout_constraintTop_toBottomOf="@+id/incrementButton" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
